--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Turn on/off user voucher",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Milan Milosev",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "googleapis": "^37.2.0"
   }
 }
