--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "googleapis": "^37.2.0"
+    "express-session": "^1.15.6",
+    "googleapis": "^37.2.0",
+    "passport": "^0.4.0",
+    "passport-auth0": "^1.1.0"
   }
 }
